# bottle

./: .gitignore  .travis.yml  Cargo.toml  README.md
bottle-server/: Dockerfile  index.js  package.json
src/: chat_window.rs  client.rs  main.rs
src/chat_window/: client.rs  mod.rs
